# dotfiles

./: .gitignore  README.md  SNAPSHOT.md
bootstrap/: boot.sh
bootstrap/boot.d/: 10_brew.sh  README.md
bootstrap/boot.d/common/: 00_prerequisites.sh  10_packages.sh  60_fzftab.sh  61_zsh_vi_mode.sh
bootstrap/boot.d/disabled/: README.md
bootstrap/boot.d/macos/: 00_prerequisites.sh  11_brew_macos.sh  12_macos.sh
bundles/base/: bundle.toml
bundles/dev-server/: .tmux.conf.append  .vimrc.prepend  .zshrc.prepend  bundle.toml
bundles/dev-server/.bin/: pbcopy.add
bundles/nas/: bundle.toml  destination.private.example
bundles/server/: bundle.toml  destination.private.example
dotfiles-bundle/: README.md  pyproject.toml
dotfiles-bundle/src/: dotfiles-bundle
dotfiles-bundle/tests/: test_dotfiles_bundle.py
links/: .aerospace.toml  .gitconfig  .hgrc  .psqlrc  .tmux.conf  .vimrc  .zshenv  .zshrc
links-in-depth/.claude/: CLAUDE.md
links-in-depth/.config/: starship.toml
links/.bin/: claude-sessions-tui  devbridge  dotfiles-bundle  dotfiles-package  dotfiles-private-link  git-ahead-behind-check  git-modified-check  local-tmux  notify  nvc  pushn  sl-bookmark-check  sl-clean-check  sl-draft-check  sl-status-check  toggle-app.sh  topic-size  window_reorg.sh
links/.config/ghostty/: config
links/.env.d/: 00_completions.env  10_autojump.env  18_gnu.env  26_mongo.env  38_zsh.env  README.md  meta.env
links/.iterm/: com.googlecode.iterm2.plist
util/: common.sh  detect_os.sh  link_everything.sh
util/package_managers/: apt.sh  brew.sh  dnf.sh
(+83 files in other folders)
