[project]
name = "dotfiles"
version = "0.1.0"
description = "Cross-platform dotfiles management with bundle support"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

# For Python < 3.11, tomli is needed for TOML parsing
legacy = [
    "tomli>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
]
